--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.11"
+python = ">=3.11,<4.0"
+langchain = "0.0.352"
+langchain-openai = "0.0.5"
+python-dotenv = "1.0.0"
+dotenv = "^0.9.9"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
